--- a/index.html
+++ b/index.html
@@ -1,70 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seu Site</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    .column {
-      flex: 1;
-      padding: 20px;
-      text-align: center;
-    }
-
-    .sub-section {
-      margin-top: 10px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Seu Site</title>
 </head>
 <body>
-
-  <div class="row">
-    <!-- Primeira Linha -->
-    <div class="column">
-      <h2>Coluna 1</h2>
-      <div class="sub-section">Submotivo 1</div>
-      <div class="sub-section">Submotivo 2</div>
+    <div class="container">
+        <div class="column">
+            <h2>Coluna 1</h2>
+            <ul>
+                <li>Submotivo 1</li>
+                <li>Submotivo 2</li>
+                <li>Submotivo 3</li>
+            </ul>
+        </div>
+        <!-- Repita este bloco para cada coluna -->
+        <!-- Exemplo para a Coluna 2 -->
+        <div class="column">
+            <h2>Coluna 2</h2>
+            <ul>
+                <li>Submotivo 1</li>
+                <li>Submotivo 2</li>
+                <li>Submotivo 3</li>
+            </ul>
+        </div>
+        <!-- Colunas 3-6 seguem o mesmo padrão -->
     </div>
-    <div class="column">
-      <h2>Coluna 2</h2>
-      <div class="sub-section">Submotivo 3</div>
-      <div class="sub-section">Submotivo 4</div>
-    </div>
-    <div class="column">
-      <h2>Coluna 3</h2>
-      <div class="sub-section">Submotivo 5</div>
-      <div class="sub-section">Submotivo 6</div>
-    </div>
-
-    <!-- Segunda Linha -->
-    <div class="column">
-      <h2>Coluna 4</h2>
-      <div class="sub-section">Submotivo 7</div>
-      <div class="sub-section">Submotivo 8</div>
-    </div>
-    <div class="column">
-      <h2>Coluna 5</h2>
-      <div class="sub-section">Submotivo 9</div>
-      <div class="sub-section">Submotivo 10</div>
-    </div>
-    <div class="column">
-      <h2>Coluna 6</h2>
-      <div class="sub-section">Submotivo 11</div>
-      <div class="sub-section">Submotivo 12</div>
-    </div>
-  </div>
-
 </body>
 </html>
