--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       flex: 1;
       padding: 20px;
       text-align: center;
+      box-sizing: border-box;
     }
 
     .sub-section {
@@ -47,7 +48,9 @@
       <div class="sub-section">Submotivo 5</div>
       <div class="sub-section">Submotivo 6</div>
     </div>
+  </div>
 
+  <div class="row">
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Coluna 4</h2>
