--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TAGSENSE2</title>
+  <title>Seu Site</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
 
     .row {
@@ -35,18 +39,18 @@
     <!-- Primeira Linha -->
     <div class="column">
       <h2>Coluna 1</h2>
-      <div class="sub-section">Submotivo 1</div>
-      <div class="sub-section">Submotivo 2</div>
+      <div class="sub-section"><a href="https://www.site1.com">Submotivo 1</a></div>
+      <div class="sub-section"><a href="https://www.site2.com">Submotivo 2</a></div>
     </div>
     <div class="column">
       <h2>Coluna 2</h2>
-      <div class="sub-section">Submotivo 3</div>
-      <div class="sub-section">Submotivo 4</div>
+      <div class="sub-section"><a href="https://www.site3.com">Submotivo 3</a></div>
+      <div class="sub-section"><a href="https://www.site4.com">Submotivo 4</a></div>
     </div>
     <div class="column">
       <h2>Coluna 3</h2>
-      <div class="sub-section">Submotivo 5</div>
-      <div class="sub-section">Submotivo 6</div>
+      <div class="sub-section"><a href="https://www.site5.com">Submotivo 5</a></div>
+      <div class="sub-section"><a href="https://www.site6.com">Submotivo 6</a></div>
     </div>
   </div>
 
@@ -54,18 +58,37 @@
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Coluna 4</h2>
-      <div class="sub-section">Submotivo 7</div>
-      <div class="sub-section">Submotivo 8</div>
+      <div class="sub-section"><a href="https://www.site7.com">Submotivo 7</a></div>
+      <div class="sub-section"><a href="https://www.site8.com">Submotivo 8</a></div>
     </div>
     <div class="column">
       <h2>Coluna 5</h2>
-      <div class="sub-section">Submotivo 9</div>
-      <div class="sub-section">Submotivo 10</div>
+      <div class="sub-section"><a href="https://www.site9.com">Submotivo 9</a></div>
+      <div class="sub-section"><a href="https://www.site10.com">Submotivo 10</a></div>
     </div>
     <div class="column">
       <h2>Coluna 6</h2>
-      <div class="sub-section">Submotivo 11</div>
-      <div class="sub-section">Submotivo 12</div>
+      <div class="sub-section"><a href="https://www.site11.com">Submotivo 11</a></div>
+      <div class="sub-section"><a href="https://www.site12.com">Submotivo 12</a></div>
+    </div>
+  </div>
+
+  <div class="row">
+    <!-- Terceira Linha -->
+    <div class="column">
+      <h2>Coluna 7</h2>
+      <div class="sub-section"><a href="https://www.site13.com">Submotivo 13</a></div>
+      <div class="sub-section"><a href="https://www.site14.com">Submotivo 14</a></div>
+    </div>
+    <div class="column">
+      <h2>Coluna 8</h2>
+      <div class="sub-section"><a href="https://www.site15.com">Submotivo 15</a></div>
+      <div class="sub-section"><a href="https://www.site16.com">Submotivo 16</a></div>
+    </div>
+    <div class="column">
+      <h2>Coluna 9</h2>
+      <div class="sub-section"><a href="https://www.site17.com">Submotivo 17</a></div>
+      <div class="sub-section"><a href="https://www.site18.com">Submotivo 18</a></div>
     </div>
   </div>
 
