--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 
   <div class="row">
-    <!-- Primeira Linha -->
+    <!-- Linha 1 -->
     <div class="column">
       <h2>Coluna 1</h2>
       <div class="sub-section"><a href="https://www.site1.com">Submotivo 1</a></div>
@@ -55,7 +55,7 @@
   </div>
 
   <div class="row">
-    <!-- Segunda Linha -->
+    <!-- Linha 2 -->
     <div class="column">
       <h2>Coluna 4</h2>
       <div class="sub-section"><a href="https://www.site7.com">Submotivo 7</a></div>
@@ -74,7 +74,7 @@
   </div>
 
   <div class="row">
-    <!-- Terceira Linha -->
+    <!-- Linha 3 -->
     <div class="column">
       <h2>Coluna 7</h2>
       <div class="sub-section"><a href="https://www.site13.com">Submotivo 13</a></div>
@@ -94,3 +94,4 @@
 
 </body>
 </html>
+
