--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
     .row {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center; /* Adicionado para centralizar as colunas */
     }
 
     .column {
       flex: 1;
+      max-width: 300px; /* Ajustado para definir a largura máxima das colunas */
       padding: 20px;
       text-align: center;
       box-sizing: border-box;
+      margin: 10px; /* Adicionado espaço entre as colunas */
     }
 
     .sub-section {
