--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="column">
       <h2>Coluna 6</h2>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-bss-jv">TESTE</a></div>
+      <div class="sub-section"><a href="https://www.site11.com">Submotivo 11</a></div>
       <div class="sub-section"><a href="https://www.site12.com">Submotivo 12</a></div>
     </div>
   </div>
