--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
     .row {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center; /* Adicionado para centralizar as colunas */
     }
 
     .column {
       flex: 1;
-      max-width: 300px; /* Ajustado para definir a largura máxima das colunas */
       padding: 20px;
       text-align: center;
       box-sizing: border-box;
-      margin: 10px; /* Adicionado espaço entre as colunas */
     }
 
     .sub-section {
@@ -39,7 +36,7 @@
 <body>
 
   <div class="row">
-    <!-- Linha 1 -->
+    <!-- Primeira Linha -->
     <div class="column">
       <h2>Coluna 1</h2>
       <div class="sub-section"><a href="https://www.site1.com">Submotivo 1</a></div>
@@ -58,7 +55,7 @@
   </div>
 
   <div class="row">
-    <!-- Linha 2 -->
+    <!-- Segunda Linha -->
     <div class="column">
       <h2>Coluna 4</h2>
       <div class="sub-section"><a href="https://www.site7.com">Submotivo 7</a></div>
@@ -73,25 +70,6 @@
       <h2>Coluna 6</h2>
       <div class="sub-section"><a href="https://www.site11.com">Submotivo 11</a></div>
       <div class="sub-section"><a href="https://www.site12.com">Submotivo 12</a></div>
-    </div>
-  </div>
-
-  <div class="row">
-    <!-- Linha 3 -->
-    <div class="column">
-      <h2>Coluna 7</h2>
-      <div class="sub-section"><a href="https://www.site13.com">Submotivo 13</a></div>
-      <div class="sub-section"><a href="https://www.site14.com">Submotivo 14</a></div>
-    </div>
-    <div class="column">
-      <h2>Coluna 8</h2>
-      <div class="sub-section"><a href="https://www.site15.com">Submotivo 15</a></div>
-      <div class="sub-section"><a href="https://www.site16.com">Submotivo 16</a></div>
-    </div>
-    <div class="column">
-      <h2>Coluna 9</h2>
-      <div class="sub-section"><a href="https://www.site17.com">Submotivo 17</a></div>
-      <div class="sub-section"><a href="https://www.site18.com">Submotivo 18</a></div>
     </div>
   </div>
 
