--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
     }
 
     .row {
@@ -39,18 +35,18 @@
     <!-- Primeira Linha -->
     <div class="column">
       <h2>Coluna 1</h2>
-      <div class="sub-section"><a href="https://www.site1.com">Submotivo 1</a></div>
-      <div class="sub-section"><a href="https://www.site2.com">Submotivo 2</a></div>
+      <div class="sub-section">Submotivo 1</div>
+      <div class="sub-section">Submotivo 2</div>
     </div>
     <div class="column">
       <h2>Coluna 2</h2>
-      <div class="sub-section"><a href="https://www.site3.com">Submotivo 3</a></div>
-      <div class="sub-section"><a href="https://www.site4.com">Submotivo 4</a></div>
+      <div class="sub-section">Submotivo 3</div>
+      <div class="sub-section">Submotivo 4</div>
     </div>
     <div class="column">
       <h2>Coluna 3</h2>
-      <div class="sub-section"><a href="https://www.site5.com">Submotivo 5</a></div>
-      <div class="sub-section"><a href="https://www.site6.com">Submotivo 6</a></div>
+      <div class="sub-section">Submotivo 5</div>
+      <div class="sub-section">Submotivo 6</div>
     </div>
   </div>
 
@@ -58,18 +54,18 @@
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Coluna 4</h2>
-      <div class="sub-section"><a href="https://www.site7.com">Submotivo 7</a></div>
-      <div class="sub-section"><a href="https://www.site8.com">Submotivo 8</a></div>
+      <div class="sub-section">Submotivo 7</div>
+      <div class="sub-section">Submotivo 8</div>
     </div>
     <div class="column">
       <h2>Coluna 5</h2>
-      <div class="sub-section"><a href="https://www.site9.com">Submotivo 9</a></div>
-      <div class="sub-section"><a href="https://www.site10.com">Submotivo 10</a></div>
+      <div class="sub-section">Submotivo 9</div>
+      <div class="sub-section">Submotivo 10</div>
     </div>
     <div class="column">
       <h2>Coluna 6</h2>
-      <div class="sub-section"><a href="https://www.site11.com">Submotivo 11</a></div>
-      <div class="sub-section"><a href="https://www.site12.com">Submotivo 12</a></div>
+      <div class="sub-section">Submotivo 11</div>
+      <div class="sub-section">Submotivo 12</div>
     </div>
   </div>
 
