--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     .row {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
     }
 
     .column {
       flex: 1;
+      max-width: 300px;
       padding: 20px;
       text-align: center;
       box-sizing: border-box;
+      margin: 10px;
     }
 
     .sub-section {
@@ -66,6 +69,25 @@
       <h2>Coluna 6</h2>
       <div class="sub-section">Submotivo 11</div>
       <div class="sub-section">Submotivo 12</div>
+    </div>
+  </div>
+
+  <div class="row">
+    <!-- Terceira Linha -->
+    <div class="column">
+      <h2>Coluna 7</h2>
+      <div class="sub-section">Submotivo 13</div>
+      <div class="sub-section">Submotivo 14</div>
+    </div>
+    <div class="column">
+      <h2>Coluna 8</h2>
+      <div class="sub-section">Submotivo 15</div>
+      <div class="sub-section">Submotivo 16</div>
+    </div>
+    <div class="column">
+      <h2>Coluna 9</h2>
+      <div class="sub-section">Submotivo 17</div>
+      <div class="sub-section">Submotivo 18</div>
     </div>
   </div>
 
