--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
     <!-- Primeira Linha -->
     <div class="column">
       <h2>Coluna 1</h2>
-      <div class="sub-section">Submotivo 1</div>
-      <div class="sub-section">Submotivo 2</div>
+      <div class="sub-section"><a href="https://www.site1.com" target="_blank">Submotivo 1</a></div>
+      <div class="sub-section"><a href="https://www.site2.com" target="_blank">Submotivo 2</a></div>
     </div>
     <div class="column">
       <h2>Coluna 2</h2>
-      <div class="sub-section">Submotivo 3</div>
-      <div class="sub-section">Submotivo 4</div>
+      <div class="sub-section"><a href="https://www.site3.com" target="_blank">Submotivo 3</a></div>
+      <div class="sub-section"><a href="https://www.site4.com" target="_blank">Submotivo 4</a></div>
     </div>
     <div class="column">
       <h2>Coluna 3</h2>
-      <div class="sub-section">Submotivo 5</div>
-      <div class="sub-section">Submotivo 6</div>
+      <div class="sub-section"><a href="https://www.site5.com" target="_blank">Submotivo 5</a></div>
+      <div class="sub-section"><a href="https://www.site6.com" target="_blank">Submotivo 6</a></div>
     </div>
   </div>
 
@@ -57,18 +57,18 @@
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Coluna 4</h2>
-      <div class="sub-section">Submotivo 7</div>
-      <div class="sub-section">Submotivo 8</div>
+      <div class="sub-section"><a href="https://www.site7.com" target="_blank">Submotivo 7</a></div>
+      <div class="sub-section"><a href="https://www.site8.com" target="_blank">Submotivo 8</a></div>
     </div>
     <div class="column">
       <h2>Coluna 5</h2>
-      <div class="sub-section">Submotivo 9</div>
-      <div class="sub-section">Submotivo 10</div>
+      <div class="sub-section"><a href="https://www.site9.com" target="_blank">Submotivo 9</a></div>
+      <div class="sub-section"><a href="https://www.site10.com" target="_blank">Submotivo 10</a></div>
     </div>
     <div class="column">
       <h2>Coluna 6</h2>
-      <div class="sub-section">Submotivo 11</div>
-      <div class="sub-section">Submotivo 12</div>
+      <div class="sub-section"><a href="https://www.site11.com" target="_blank">Submotivo 11</a></div>
+      <div class="sub-section"><a href="https://www.site12.com" target="_blank">Submotivo 12</a></div>
     </div>
   </div>
 
@@ -76,18 +76,18 @@
     <!-- Terceira Linha -->
     <div class="column">
       <h2>Coluna 7</h2>
-      <div class="sub-section">Submotivo 13</div>
-      <div class="sub-section">Submotivo 14</div>
+      <div class="sub-section"><a href="https://www.site13.com" target="_blank">Submotivo 13</a></div>
+      <div class="sub-section"><a href="https://www.site14.com" target="_blank">Submotivo 14</a></div>
     </div>
     <div class="column">
       <h2>Coluna 8</h2>
-      <div class="sub-section">Submotivo 15</div>
-      <div class="sub-section">Submotivo 16</div>
+      <div class="sub-section"><a href="https://www.site15.com" target="_blank">Submotivo 15</a></div>
+      <div class="sub-section"><a href="https://www.site16.com" target="_blank">Submotivo 16</a></div>
     </div>
     <div class="column">
       <h2>Coluna 9</h2>
-      <div class="sub-section">Submotivo 17</div>
-      <div class="sub-section">Submotivo 18</div>
+      <div class="sub-section"><a href="https://www.site17.com" target="_blank">Submotivo 17</a></div>
+      <div class="sub-section"><a href="https://www.site18.com" target="_blank">Submotivo 18</a></div>
     </div>
   </div>
 
