--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seu Site</title>
   <style>
-    html, body {
-      height: 100%;
+    body {
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
       display: flex;
       justify-content: center;
       align-items: center;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
+      min-height: 100vh;
     }
 
     .row {
