--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
   <div class="row">
     <!-- Primeira Linha -->
     <div class="column">
-      <h2>Coluna 1</h2>
-      <div class="sub-section"><a href="https://www.site1.com" target="_blank">Submotivo 1</a></div>
-      <div class="sub-section"><a href="https://www.site2.com" target="_blank">Submotivo 2</a></div>
+      <h2>Todas Demandas do BSS</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-alterar-1-2" target="_blank">Alterar</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-confirmar" target="_blank">Confirmar</a></div>
+       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-consultar-1-4" target="_blank">Consultar</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/contestar-2" target="_blank">Contestar</a></div>
+       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-localizar" target="_blank">Localizar</a></div>
+       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/reclamar-caixa-tag" target="_blank">Reclamar</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-solicitar-1-4" target="_blank">Solicitar</a></div>
     </div>
     <div class="column">
       <h2>Coluna 2</h2>
