--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-solicitar-1-4" target="_blank">Solicitar</a></div>
     </div>
     <div class="column">
-      <h2>Coluna 2</h2>
-      <div class="sub-section"><a href="https://www.site3.com" target="_blank">Submotivo 3</a></div>
-      <div class="sub-section"><a href="https://www.site4.com" target="_blank">Submotivo 4</a></div>
+      <h2>Informações de Onde Utilizar</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/pedagio-jv" target="_blank">Pedágio</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/abastece-jv" target="_blank">Abastecimento</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/sobre-drive-thru-jv" target="_blank">Drive-Thru</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/sobre-o-lava-rapido-jv" target="_blank">Lava-Rápido</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/estacionamento-jv" target="_blank">Estacionamento</a></div>
     </div>
     <div class="column">
       <h2>Coluna 3</h2>
