--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/estacionamento-jv" target="_blank">Estacionamento</a></div>
     </div>
     <div class="column">
-      <h2>Coluna 3</h2>
-      <div class="sub-section"><a href="https://www.site5.com" target="_blank">Submotivo 5</a></div>
-      <div class="sub-section"><a href="https://www.site6.com" target="_blank">Submotivo 6</a></div>
+      <h2>Todas Contestações em Geral</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/contestar" target="_blank">Disparo a Maior</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/pagamento-indevido-1" target="_blank">Pagamento Indevido</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/home-taxas" target="_blank">Taxas</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/multa-por-evasao-1-1" target="_blank">Multa por Evasão</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/placas" target="_blank">Placa</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/home-transacoes" target="_blank">Transações</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/motivos-automatizados-de-contestacao" target="_blank">Motivos automatizados de Contestação</a></div>
     </div>
   </div>
 
