--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
   <div class="row">
     <!-- Segunda Linha -->
     <div class="column">
-      <h2>Coluna 4</h2>
-      <div class="sub-section"><a href="https://www.site7.com" target="_blank">Submotivo 7</a></div>
-      <div class="sub-section"><a href="https://www.site8.com" target="_blank">Submotivo 8</a></div>
+      <h2>Financeiro</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/comunicado-tagcaixa" target="_blank">Informações sobre Forma de Pagamento</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/glossario-de-fatura-jv" target="_blank">Glossário de Fatura</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/autorizacao-de-debito-automatico" target="_blank">Autorizar Débito Automático</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
+
+
     </div>
     <div class="column">
       <h2>Coluna 5</h2>
