--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/glossario-de-fatura-jv" target="_blank">Glossário de Fatura</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/autorizacao-de-debito-automatico" target="_blank">Autorizar Débito Automático</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/cartao-de-credito-caixa-tag" target="_blank">Todos erros no Cartão de Crédito</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/debito-automatico-caixa-tag" target="_blank">Todos erros no Débito Automático</a></div>
 
 
     </div>
