--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/cartao-de-credito-caixa-tag" target="_blank">Todos erros no Cartão de Crédito</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/debito-automatico-caixa-tag" target="_blank">Todos erros no Débito Automático</a></div>
-
-
     </div>
     <div class="column">
-      <h2>Coluna 5</h2>
-      <div class="sub-section"><a href="https://www.site9.com" target="_blank">Submotivo 9</a></div>
-      <div class="sub-section"><a href="https://www.site10.com" target="_blank">Submotivo 10</a></div>
+      <h2>Informações Uteis</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/validacao-de-seguranca-1" target="_blank">Validação de Segurança PF e PJ</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/aumento-de-limite-drive-thru-menos-de-90-dias-e-mais-de-90-dias" target="_blank">Aumento de limite Drive Thru (- e + de 90 dias)</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações Site Minha Conta</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/app-caixa-tag" target="_blank">Informações APP Tag Caixa/Simulador APP</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/portal-empresas-tagcaixa" target="_blank">Informações sobre o SPE (Portal para Empresas)</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/envio-de-documentos" target="_blank">Email para Envio de Documentos</a></div>
     </div>
     <div class="column">
       <h2>Coluna 6</h2>
