--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/envio-de-documentos" target="_blank">Email para Envio de Documentos</a></div>
     </div>
     <div class="column">
-      <h2>Coluna 6</h2>
-      <div class="sub-section"><a href="https://www.site11.com" target="_blank">Submotivo 11</a></div>
-      <div class="sub-section"><a href="https://www.site12.com" target="_blank">Submotivo 12</a></div>
+      <h2>Bloqueios</h2>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/sobre-os-bloqueios-jv" target="_blank">Todos os Bloqueios</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/nao-consegue-utilizar" target="_blank">Reclamar não consegue utilizar</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/troca-em-garantia-1" target="_blank">Troca em Garantia</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/substituicao-jv" target="_blank">Substituição</a></div>
     </div>
   </div>
 
