--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background-color: #f0f0f0; /* Cor de fundo */
+      background-color: #005ca9; /* Cor de fundo */
       color: #333; /* Cor do texto padrão */
     }
 
