--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     }
 
     .sub-section a {
-      color: #007bff; /* Cor do link */
+      color: #C0C0C0; /* Cor do link */
       text-decoration: none;
       transition: color 0.3s ease; /* Transição suave da cor do link */
     }
 
     .sub-section a:hover {
-      color: #0056b3; /* Cor do link ao passar o mouse */
+      color: #fa6705; /* Cor do link ao passar o mouse */
     }
 
   </style>
