--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seu Site</title>
+  <title>TAGcafecomleiteSENSE</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial Black, sans-serif;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -15,7 +15,7 @@
       align-items: center;
       min-height: 100vh;
       background-color: #005ca9; /* Cor de fundo */
-      color: #333; /* Cor do texto padrão */
+      color: #FFFFFF; /* Cor do texto padrão */
     }
 
     .row {
@@ -31,29 +31,29 @@
       text-align: center;
       box-sizing: border-box;
       margin: 10px;
-      background-color: #fff; /* Cor de fundo das colunas */
+      background-color: #FF9800; /* Cor de fundo das colunas */
       border-radius: 8px; /* Borda arredondada */
       transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
     }
 
     .column:hover {
-      background-color: #e0e0e0; /* Cor de fundo ao passar o mouse */
+      background-color: #FFA500; /* Cor de fundo ao passar o mouse */
     }
 
     .sub-section {
       margin-top: 10px;
       text-align: center;
-      color: #555; /* Cor do texto dentro das colunas */
+      color: #000000; /* Cor do texto dentro das colunas */
     }
 
     .sub-section a {
-      color: #C0C0C0; /* Cor do link */
+      color: #000000; /* Cor do link */
       text-decoration: none;
       transition: color 0.3s ease; /* Transição suave da cor do link */
     }
 
     .sub-section a:hover {
-      color: #fa6705; /* Cor do link ao passar o mouse */
+      color: #005ca9; /* Cor do link ao passar o mouse */
     }
 
   </style>
