--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TAGcafecomleiteSENSE</title>
   <style>
     body {
-      font-family: Arial Black, sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
