--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>TAGcafecomleiteSENSE</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial Black, sans-serif;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
@@ -27,14 +27,16 @@
     .column {
       flex: 1;
       max-width: 300px;
+      width: 100%; /* Tornar todas as colunas com a mesma largura */
       padding: 20px;
       text-align: center;
       box-sizing: border-box;
       margin: 10px;
-      background-color: #FF9800; /* Cor de fundo das colunas */
+      background-color: ##FF9800; /* Cor de fundo das colunas */
       border-radius: 8px; /* Borda arredondada */
       transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
     }
+  
 
     .column:hover {
       background-color: #FFA500; /* Cor de fundo ao passar o mouse */
