--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       text-align: center;
       box-sizing: border-box;
       margin: 10px;
-      background-color: ##FF9800; /* Cor de fundo das colunas */
+      background-color: #FF9800; /* Cor de fundo das colunas */
       border-radius: 8px; /* Borda arredondada */
       transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
     }
