--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
       background-color: #FFA500; /* Cor de fundo ao passar o mouse */
     }
 
-    .sub-section {
-      margin-top: 10px;
-      text-align: center;
-      color: #000000; /* Cor do texto dentro das colunas */
-    }
+   .sub-section {
+  margin-top: 10px;
+  text-align: center;
+  color: #000000; /* Cor do texto dentro das colunas */
+  font-size: 16px; /* Tamanho da fonte ajustável conforme necessário */
+}
+
 
     .sub-section a {
       color: #000000; /* Cor do link */
