--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
       background-color: #FFA500; /* Cor de fundo ao passar o mouse */
     }
 
+    .column h2 {
+      font-size: 18px; /* Tamanho do texto do cabeçalho ajustável conforme necessário */
+    }
+
    .sub-section {
   margin-top: 10px;
   text-align: center;
