--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
       font-size: 16px; /* Tamanho do texto do cabeçalho ajustável conforme necessário */
     }
 
+.sub-section {
+  margin-top: 10px;
+  text-align: center;
+  color: #555;
+  font-size: 16px;
+  flex-grow: 1; /* Permite que o conteúdo cresça para ocupar o espaço disponível */
+}
    .sub-section {
   margin-top: 10px;
   text-align: center;
