--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/multa-por-evasao-1-1" target="_blank">Multa por Evasão</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/placas" target="_blank">Placa</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/minha-conta/inicio/home-transacoes" target="_blank">Transações</a></div>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/motivos-automatizados-de-contestacao" target="_blank">Motivos Automatizados de Contestação</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/motivos-automatizados-de-contestacao" target="_blank">Contestações Automáticas</a></div>
     </div>
   </div>
 
