--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       align-items: center;
       min-height: 100vh;
       background-color: #005ca9; /* Cor de fundo */
-      color: #FFFFFF; /* Cor do texto padrão */
+      color: #FF9800; /* Cor do texto padrão */
     }
 
     .row {
@@ -32,7 +32,7 @@
       text-align: center;
       box-sizing: border-box;
       margin: 10px;
-      background-color: #FF9800; /* Cor de fundo das colunas */
+      background-color: #000000; /* Cor de fundo das colunas */
       border-radius: 8px; /* Borda arredondada */
       transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
     }
