--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       align-items: center;
       min-height: 100vh;
       background-color: #005ca9; /* Cor de fundo */
-      color: #FF9800; /* Cor do texto padrão */
+      color: #fa6705; /* Cor do texto padrão */
     }
 
     .row {
