--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
   flex-grow: 1; /* Permite que o conteúdo cresça para ocupar o espaço disponível */
 }
 
+.sub-section::before {
+  content: "•"; /* Adiciona uma bolinha como conteúdo do elemento antes do link */
+  color: #007bff; /* Cor da bolinha */
+  font-size: 20px; /* Tamanho da bolinha */
+  margin-right: 5px; /* Espaçamento entre a bolinha e o texto */
+}
+
+
     .sub-section a {
       color: #000000; /* Cor do link */
       text-decoration: none;
