--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <h2>Informações Uteis</h2>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/validacao-de-seguranca-1" target="_blank">Validação de Segurança PF e PJ</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/aumento-de-limite-drive-thru-menos-de-90-dias-e-mais-de-90-dias" target="_blank">Aumento de limite Drive Thru (- e + de 90 dias)</a></div>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações Site Minha Conta</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações SITE Minha Conta</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/app-caixa-tag" target="_blank">Informações APP Tag Caixa</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/portal-empresas-tagcaixa" target="_blank">Informações sobre o SPE (Portal para Empresas)</a></div>
     </div>
