--- a/index.html
+++ b/index.html
@@ -11,11 +11,22 @@
       padding: 0;
       box-sizing: border-box;
       display: flex;
-      justify-content: center;
+      flex-direction: column; /* Ajusta a direção do layout para coluna */
       align-items: center;
-      min-height: 100vh;
       background-color: #005ca9; /* Cor de fundo */
       color: #fa6705; /* Cor do texto padrão */
+    }
+
+    #header-container {
+      width: 100%;
+      max-height: 200px;
+      overflow: hidden; /* Impede que a imagem ultrapasse as bordas do contêiner */
+      border-bottom: 5px solid #fa6705; /* Adiciona uma borda na parte inferior do contêiner */
+    }
+
+    #header-image {
+      width: 100%;
+      object-fit: cover;
     }
 
     .row {
@@ -27,54 +38,55 @@
     .column {
       flex: 1;
       max-width: 300px;
-      width: 100%; /* Tornar todas as colunas com a mesma largura */
+      width: 100%;
       padding: 20px;
       text-align: center;
       box-sizing: border-box;
       margin: 10px;
-      background-color: #FFFFFF; /* Cor de fundo das colunas */
-      border-radius: 8px; /* Borda arredondada */
-      transition: background-color 0.3s ease; /* Transição suave da cor de fundo */
+      background-color: #FFFFFF;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
     }
-  
 
     .column:hover {
-      background-color: #FFA500; /* Cor de fundo ao passar o mouse */
+      background-color: #FFA500;
     }
 
     .column h2 {
-      font-size: 16px; /* Tamanho do texto do cabeçalho ajustável conforme necessário */
+      font-size: 16px;
     }
 
-.sub-section {
-  margin-top: 10px;
-  text-align: center;
-  color: #000000;
-  font-size: 16px;
-  flex-grow: 1; /* Permite que o conteúdo cresça para ocupar o espaço disponível */
-}
+    .sub-section {
+      margin-top: 10px;
+      text-align: center;
+      color: #000000;
+      font-size: 16px;
+      flex-grow: 1;
+    }
 
-.sub-section::before {
-  content: "•"; /* Adiciona uma bolinha como conteúdo do elemento antes do link */
-  color: #007bff; /* Cor da bolinha */
-  font-size: 20px; /* Tamanho da bolinha */
-  margin-right: 5px; /* Espaçamento entre a bolinha e o texto */
-}
-
+    .sub-section::before {
+      content: "•";
+      color: #007bff;
+      font-size: 20px;
+      margin-right: 5px;
+    }
 
     .sub-section a {
-      color: #000000; /* Cor do link */
+      color: #000000;
       text-decoration: none;
-      transition: color 0.3s ease; /* Transição suave da cor do link */
+      transition: color 0.3s ease;
     }
 
     .sub-section a:hover {
-      color: #005ca9; /* Cor do link ao passar o mouse */
+      color: #005ca9;
     }
-
   </style>
 </head>
 <body>
+
+ <h1>Bem-vindo ao TagSense</h1>
+    <img src="https://tag.caixaprepagos.com.br/caixa-global/image/logo_tagcaixa_agrupado_desk.png" alt="Minha Imagem" width="800">
+    <p class="texto1">Clique nos links abaixo para visitar diferentes locais do Edusense e tirar suas dúvidas:</p>
 
   <div class="row">
     <!-- Primeira Linha -->
@@ -89,10 +101,10 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-solicitar-1-4" target="_blank">Solicitar</a></div>
     </div>
     <div class="column">
-      <h2>Informações de Onde Utilizar</h2>
+      <h2>Informações Uteis</h2>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/validacao-de-seguranca-1" target="_blank">Validação de Segurança PF e PJ</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/aumento-de-limite-drive-thru-menos-de-90-dias-e-mais-de-90-dias" target="_blank">Aumento de limite Drive Thru (- e + de 90 dias)</a></div>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações SITE Minha Conta</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações SITE sdsadaaff Minha Conta</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/app-caixa-tag" target="_blank">Informações APP Tag Caixa</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/portal-empresas-tagcaixa" target="_blank">Informações sobre o SPE (Portal para Empresas)</a></div>
     </div>
@@ -112,7 +124,7 @@
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Financeiro</h2>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/comunicado-tagcaixa" target="_blank">Informações sobre Forma de Pagamento</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/comunicado-tagcaixa" target="_blank">Informações Forma de Pagamento</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/glossario-de-fatura-jv" target="_blank">Glossário de Fatura</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/autorizacao-de-debito-automatico" target="_blank">Autorizar Débito Automático</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
@@ -120,7 +132,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/debito-automatico-caixa-tag" target="_blank">Erros no Débito Automático</a></div>
     </div>
     <div class="column">
-      <h2>Informações Uteis</h2>
+      <h2>Informações de Onde Utilizar</h2>
            <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/pedagio-jv" target="_blank">Pedágio</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/abastece-jv" target="_blank">Abastecimento</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/sobre-drive-thru-jv" target="_blank">Drive-Thru</a></div>
