--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TAGcafecomleiteSENSE</title>
+  <link rel="icon" href="https://www.freepnglogos.com/uploads/logo-caixa-png/caixa-download-png-5.png" type="image/x-icon">
   <style>
     body {
       font-family: Arial Black, sans-serif;
