--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- Segunda Linha -->
     <div class="column">
       <h2>Financeiro</h2>
-      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/comunicado-tagcaixa" target="_blank">Informações Forma de Pagamento</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/comunicado-tagcaixa" target="_blank">Forma de Pagamento</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/glossario-de-fatura-jv" target="_blank">Glossário de Fatura</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/autorizacao-de-debito-automatico" target="_blank">Autorizar Débito Automático</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
