--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TAGcafecomleiteSENSE</title>
+  <title>TAGSENSE</title>
   <link rel="icon" href="https://www.freepnglogos.com/uploads/logo-caixa-png/caixa-download-png-5.png" type="image/x-icon">
   <style>
     body {
