--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-solicitar-1-4" target="_blank">Solicitar</a></div>
     </div>
     <div class="column">
-      <h2>Informações Uteis</h2>
+      <h2>Informações Úteis</h2>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/validacao-de-seguranca-1" target="_blank">Validação de Segurança PF e PJ</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/aumento-de-limite-drive-thru-menos-de-90-dias-e-mais-de-90-dias" target="_blank">Aumento de limite Drive Thru (- e + de 90 dias)</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/minha-conta-jv" target="_blank">Informações SITE Minha Conta</a></div>
