--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/nao-consegue-utilizar" target="_blank">Reclamar não consegue utilizar</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/troca-em-garantia-1" target="_blank">Troca em Garantia</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/substituicao-jv" target="_blank">Substituição</a></div>
+ <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/solicitar-incluir-ocorrencia-ocorrencia-generica" target="_blank">Abrir Ocorrência Genérica</a></div>
     </div>
   </div>
 
