--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/sobre-drive-thru-jv" target="_blank">Drive-Thru</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/sobre-o-lava-rapido-jv" target="_blank">Lava-Rápido</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki-categorias/estacionamento-jv" target="_blank">Estacionamento</a></div>
+ <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/ponto-a-ponto-jv" target="_blank">Ponto a Ponto</a></div>
     </div>
     <div class="column">
       <h2>Bloqueios</h2>
