--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
        <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-localizar" target="_blank">Localizar</a></div>
        <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/reclamar-caixa-tag" target="_blank">Reclamar</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/demandas-solicitar-1-4" target="_blank">Solicitar</a></div>
+      <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/planos-jv-1-1" target="_blank">Planos</a></div>
     </div>
     <div class="column">
       <h2>Informações Úteis</h2>
