--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <h2>Links TAG LOTERICA E LOTERICA</h2>
       <div class="sub-section"><a href="https://docs.google.com/document/d/1TVBMUrYxvGASEdmrtqiPBB5Y_8b-0xK5US1dj2-zT80/edit" target="_blank">Roteiro Tag Loterica</a></div>
       <div class="sub-section"><a href="https://drive.google.com/file/d/1I-Xbo9EgGIiqstVfLxroaSegi5U9D9Ik/view" target="_blank">FAQ Loterico</a></div>
-      <div class="sub-section"><a href="https://drive.google.com/file/d/1Igz4VfR4uRp8CQqinKNK6JUc__kAfb4q/view">Treinamento TAG Loterica</a></div>
+      <div class="sub-section"><a href="https://drive.google.com/file/d/1Igz4VfR4uRp8CQqinKNK6JUc__kAfb4q/view" target="_blank">Treinamento TAG Loterica</a></div>
       <div class="sub-section"><a href="https://drive.google.com/file/d/1XMVUbkYgy4g4vACoOVF6uC8ydZOBVl3M/view" target="_blank">Telas da Página de Ativação</a></div>
       <div class="sub-section"><a href="https://docs.google.com/presentation/d/1bYwG8T04DLZyil_nR-HPkCYdKTIcutiy/edit#slide=id.p1" target="_blank">Inutilização Tag Loterica</a></div>
   </div>
