--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
  <h1>      </h1>
     <img src="https://tag.caixaprepagos.com.br/caixa-global/image/logo_tagcaixa_agrupado_desk.png" alt="Minha Imagem" width="800">
-    <p class="texto1">Clique nos links abaixo para visitar diferentes locais do Edusense e tirar suas dúvidas:</p>
+    <p class="texto1">Clique nos links abaixo para verificar sobre procedimentos e tirar suas dúvidas:</p>
 
   <div class="row">
     <!-- Primeira Linha -->
