--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/taxa-de-reprocessamento-1-1" target="_blank">Taxa de Reprocessamento</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/cartao-de-credito-caixa-tag" target="_blank">Erros no Cartão de Crédito</a></div>
       <div class="sub-section"><a href="https://atento.edusense.com.br/semparar/index.php/wiki/debito-automatico-caixa-tag" target="_blank">Erros no Débito Automático</a></div>
+      <div class="sub-section"><a href="https://docs.google.com/document/d/1tocP9N_TbFXHfrk8ie-Xo_AYG0dymFpn_LWQabNwbg0/edit"_blank">Autorizar Débito Manual (Banco Caixa)</a></div>
     </div>
     <div class="column">
       <h2>Informações de Onde Utilizar</h2>
